# Ada-assistant

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
ada_assistant/: graph.py  router.py
ada_assistant/agents/: agents.py
ada_assistant/tools/: __init__.py  crawler_tool.py  finance_tools.py  fun_tools.py  morning_tools.py  news_tools.py  summary_tools.py  time_tools.py  transport_tools.py  weather_tools.py  web_search.py
ada_assistant/utils/: llm_loader.py
tests/: test_graph.py  test_router.py  test_tools.py
